# pocket-agent-v2

./: .gitignore  .gitmodules  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pocketagent/: AssistantActivity.kt  AudioRecorder.kt  PocketRecognitionService.kt  PocketSessionService.kt  PocketVoiceService.kt
app/src/main/java/com/pocketagent/engine/: LlmEngine.kt  SttEngine.kt  TtsEngine.kt
app/src/main/java/com/pocketagent/service/: FileLogger.kt  InferenceService.kt  ModelManager.kt
app/src/main/java/com/pocketagent/ui/: DownloadScreen.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: voice_interaction_service.xml
llm/: build.gradle.kts
llm/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
llm/src/main/java/com/pocketagent/llm/: LlamaLib.kt
stt/: build.gradle.kts
stt/src/main/cpp/: CMakeLists.txt  whisper_jni.c
stt/src/main/java/com/pocketagent/stt/: WhisperLib.kt
